--- a/doc/scribble.css
+++ b/doc/scribble.css
@@ -1,4 +1,8 @@
 
+/* This file is used by default by all Scribble documents.
+   See also "manual.css", which is added by default by the
+   `scribble/manual` language. */
+
 /* CSS seems backward: List all the classes for which we want a
    particular font, so that the font can be changed in one place.  (It
    would be nicer to reference a font definition from all the places
@@ -13,13 +17,17 @@
 }
 
 /* Serif: */
-.main, .refcontent, .tocview, .tocsub, i {
+.main, .refcontent, .tocview, .tocsub, .sroman, i {
   font-family: serif;
 }
 
 /* Sans-serif: */
-.version, .versionNoNav {
+.version, .versionNoNav, .ssansserif {
   font-family: sans-serif;
+}
+.ssansserif {
+  font-size: 80%;
+  font-weight: bold;
 }
 
 /* ---------------------------------------- */
@@ -36,6 +44,11 @@ h2 { /* per-page main title */
 h3, h4, h5, h6, h7, h8 {
   margin-top: 1.75em;
   margin-bottom: 0.5em;
+}
+
+.SSubSubSubSection {
+  font-weight: bold;
+  font-size: 0.83em; /* should match h5; from HTML 4 reference */
 }
 
 /* Needed for browsers like Opera, and eventually for HTML 4 conformance.
@@ -109,6 +122,10 @@ table td {
   padding: 0;
 }
 
+.nosearchform {
+  display: none;
+}
+
 .searchbox {
   width: 16em;
   margin: 0px;
@@ -149,6 +166,10 @@ table td {
   font-size: xx-small; /* avoid overlap with author */
 }
 
+.version:before, .versionNoNav:before {
+  content: "Version ";
+}
+
 /* ---------------------------------------- */
 /* Margin notes */
 
@@ -184,7 +205,7 @@ table td {
   margin-bottom: 0;
 }
 
-.refparaleft {
+.refparaleft, .refelemleft {
   position: relative;
   float: left;
   right: 2em;
@@ -193,7 +214,7 @@ table td {
   margin: 0em 0em 0em -13em;
 }
 
-.refcolumnleft, .refelemleft {
+.refcolumnleft {
   background-color: #F5F5DC;
   display: block;
   position: relative;
@@ -251,6 +272,10 @@ table td {
 }
 .tocviewlist table {
   font-size: 82%;
+}
+
+.tocviewlisttopspace {
+  margin-bottom: 1em;
 }
 
 .tocviewsublist, .tocviewsublistonly, .tocviewsublisttop, .tocviewsublistbottom {
@@ -319,14 +344,6 @@ table td {
   margin: 0.2em;
 }
 
-.sepspace {
-  font-size: 40%;
-}
-
-.septitle {
-  font-size: 70%;
-}
-
 /* ---------------------------------------- */
 /* Some inline styles */
 
@@ -338,16 +355,6 @@ table td {
   white-space: nowrap;
 }
 
-.stt {
-}
-
-.title {
-  font-size: 200%;
-  font-weight: normal;
-  margin-top: 2.8em;
-  text-align: center;
-}
-
 pre { margin-left: 2em; }
 blockquote { margin-left: 2em; }
 
@@ -356,12 +363,18 @@ ol ol       { list-style-type: lower-alpha; }
 ol ol ol    { list-style-type: lower-roman; }
 ol ol ol ol { list-style-type: upper-alpha; }
 
-i {
-}
-
 .SCodeFlow {
   display: block;
   margin-left: 1em;
+  margin-bottom: 0em;
+  margin-right: 1em;
+  margin-top: 0em;
+  white-space: nowrap;  
+}
+
+.SVInsetFlow {
+  display: block;
+  margin-left: 0em;
   margin-bottom: 0em;
   margin-right: 0em;
   margin-top: 0em;
@@ -413,16 +426,18 @@ i {
   margin-right: 0.3em;
 }
 
-.Smaller{
+.Smaller {
   font-size: 82%;
 }
 
-.Larger{
+.Larger {
   font-size: 122%;
 }
 
 /* A hack, inserted to break some Scheme ids: */
 .mywbr {
+  display: inline-block;
+  height: 0;
   width: 0;
   font-size: 1px;
 }
@@ -454,4 +469,16 @@ i {
 .author {
   display: inline;
   white-space: nowrap;
+}
+
+/* print styles : hide the navigation elements */
+@media print {
+  .tocset,
+  .navsettop,
+  .navsetbottom { display: none; }
+  .maincolumn {
+    width: auto;
+    margin-right: 13em;
+    margin-left: 0;
+  }
 }
